<resources>
    <string name="app_name">NT118Project</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="signin_text_en">SIGN IN</string>
    <string name="signin_text_vn">ĐĂNG NHẬP</string>
    <string name="wc_text_en">To have better experience</string>
    <string name="wc_text_vn">Để có trải nghiệm tốt hơn</string>
    <string name="gg_signin_en">CONTINUE WITH GOOGLE</string>
    <string name="gg_signin_vn">TIẾP TỤC VỚI GOOGLE</string>
    <string name="ac_signin_en">SIGN IN WITH ACCOUNT</string>
    <string name="ac_signin_vn">ĐĂNG NHẬP VỚI TÀI KHOẢN</string>
    <string name="or_text_en">OR</string>
    <string name="or_text_vn">HOẶC</string>
    <string name="LinkToRegister_en">
        Not a member?
        <a href="">
            <u>Sign up now</u>
        </a>
    </string>
    <string name="LinkToRegister_vn">
        Chưa có tài khoản?
        <a href="">
            <u>Đăng ký ngay</u>
        </a>
    </string>
    <string name="back_en">Back</string>
    <string name="back_vn">Trở lại</string>
    <string name="welcome_text_en">Welcome,</string>
    <string name="welcome_text_vn">Chào mừng,</string>
    <string name="signup_text_en">Sign up!</string>
    <string name="signup_text_vn">Đăng ký!</string>
    <string name="username_text_en">Username</string>
    <string name="username_text_vn">Tên đăng nhập</string>
    <string name="email_text">Email</string>
    <string name="password_text_en">Password</string>
    <string name="password_text_vn">Mật khẩu</string>
    <string name="confirm_password_text_en">Confirm password</string>
    <string name="confirm_password_text_vn">Xác nhận mật khẩu</string>
    <string name="signup_upper_en">SIGN UP</string>
    <string name="signup_upper_vn">ĐĂNG KÝ</string>
    <string name="type_hint_en">Type...</string>
    <string name="type_hint_vn">Nhập...</string>
    <string name="welcome_back_text_en">Welcome back,</string>
    <string name="welcome_back_text_vn">Chào mừng trở lại,</string>
    <string name="signin1_text_en">Sign in!</string>
    <string name="signin1_text_vn">Đăng nhập!</string>
    <string name="user_role">USER ROLES</string>
    <string name="ForgotPassword_en">
        <a href="">
            <u>Forgot your password?</u>
        </a>
    </string>
    <string name="ForgotPassword_vn">
        <a href="">
            <u>Quên mật khẩu?</u>
        </a>
    </string>
    <string name="signin_upper_en">SIGN IN</string>
    <string name="signin_upper_vn">ĐĂNG NHẬP</string>
    <string name="reset_text_en">Reset</string>
    <string name="old_password_text_en">Old password</string>
    <string name="new_password_text_en">New password</string>
    <string name="reset_upper_en">RESET</string>
    <string name="send_email_text_en">SEND EMAIL</string>
    <string name="reset_text_vn">Đặt lại</string>
    <string name="old_password_text_vn">Mật khẩu cũ</string>
    <string name="new_password_text_vn">Mật khẩu mới</string>
    <string name="reset_upper_vn">ĐẶT LẠI</string>
    <string name="send_email_text_vn">GỬI EMAIL</string>
    <string name="errInput">Wrong username or password!</string>
    <string name="connErr">Connect failed!</string>
    <string name="networkErr">Network error!</string>
    <string name="resetSucc">Password changed</string>
    <string name="confirmErr">Confirm password not match!</string>
    <string name="loginSucc">Login successful</string>
    <string name="loginFailed">Login failed!</string>
    <string name="emailErr">Email already exists!</string>
    <string name="invalidEmail">Invalid email address!</string>
    <string name="userErr">Username already exists!</string>
    <string name="signupSucc">Signup successfully</string>
    <string name="welcome">"Welcome, "</string>
    <string name="default_web_client_id">393644215199-ndocj7fn069cg9ql2ns5q0kip99n2fh8.apps.googleusercontent.com</string>


    <string name="user_info_text_en">Your information</string>
    <string name="profile_en">Profile</string>
    <string name="user_info_text_vn">Đăng ký!</string>
    <string name="logout_en">Logout</string>
    <string name="logout_vn">Đăng xuất</string>
    <string name="firstname_en">Firstname</string>
    <!--    <string name="edit_vn">Chỉnh sửa</string>-->
    <string name="lastname_en">Lastname</string>
    <!--    <string name="edit_vn">Chỉnh sửa</string>-->

    <!--    Home-->
    <string name="hi_en">Hi,</string>

    <!--    Graph-->
    <string name="graph_en">Graph</string>
    <string name="show_en">Show</string>
    <string name="homeNavi_en">Home</string>
    <string name="graphNavi_en">Graph</string>
    <string name="mapNavi_en">Map</string>
    <string name="profileNavi_en">Profile</string>
    <string name="degreeC">°C</string>
    <string name="rainfall_en">RAINFALL</string>
    <string name="mm">mm</string>
    <string name="temperature_en">TEMPERATURE</string>
    <string name="humidity_en">HUMIDITY</string>
    <string name="percent">%</string>
    <string name="wind_direction_en">WIND DIRECTION</string>
    <string name="degrees_en">degrees</string>
    <string name="wind_speed_en">WIND SPEED</string>
    <string name="m_s">m/s</string>
    <string name="starting_date_en">Starting date</string>
    <string name="name">Name</string>
    <string name="ending_date_en">Ending date</string>
    <string name="assigned">Assigned:</string>
    <string name="description">Description:</string>
    <string-array name="attributes_array">
        <item>Select Attribute</item>
        <item>Temperature</item>
        <item>Humidity</item>
        <item>Rainfall</item>
        <!--        <item>Wind direction</item>-->
        <!--        <item>Wind speed</item>-->
    </string-array>

    <string-array name="timeframe_array">
        <item>Select Timeframe</item>
        <item>Day</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
</resources>