<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/languageButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:scaleType="centerInside"
        android:src="@drawable/english"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img"
        android:layout_above="@+id/sigin_text"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/sigin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/welcome_text"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:text="@string/signin_text_en"
        android:textSize="35dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wc_text_en"
        android:textSize="20dp"
        android:layout_above="@+id/googleSignIn"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/logogoogle"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="70dp"
        android:src="@drawable/logogoogle"
        android:translationZ="@android:dimen/app_icon_size"
        android:layout_above="@+id/email_signin"
        android:layout_marginBottom="37dp" />

    <TextView
        android:id="@+id/googleSignIn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/gg_signin_en"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:background="@drawable/shadowbtn"
        android:elevation="10dp"
        android:paddingLeft="45dp"
        android:layout_above="@+id/email_signin"
        android:layout_marginBottom="30dp"/>


    <TextView
        android:id="@+id/email_signin"
        android:layout_above="@+id/or_text"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/ac_signin_en"
        android:textSize="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/borderbtn"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_text_en"
        android:textSize="20dp"
        android:layout_above="@+id/linktoregister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/linktoregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="80dp"
        android:text="@string/LinkToRegister_en"
        android:textSize="18dp"
        android:textAlignment="center" />

</RelativeLayout>
