<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/languageButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:scaleType="centerInside"
        android:src="@drawable/english"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"/>

    <ImageView
        android:layout_width="320dp"
        android:layout_height="400dp"
        android:src="@drawable/art5"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-100dp" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:src="@drawable/arrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/back_en"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:text="@string/welcome_back_text_en"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="105dp"
        android:text="@string/signin1_text_en"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUsername"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/username_text_en"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="Type..."
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:inputType="textEmailAddress"
        android:background="@drawable/borderbtn"
        android:layout_above="@+id/textViewPassword"
        android:elevation="7dp"/>


    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/user"
        android:layout_above="@+id/textViewPassword"
        android:layout_marginBottom="34dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"
        android:translationZ="@android:dimen/app_icon_size" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/password_text_en"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="Type..."
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:inputType="textPassword"
        android:background="@drawable/borderbtn"
        android:layout_above="@+id/forgotpassword"
        android:elevation="7dp"/>

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_above="@+id/forgotpassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="34dp"
        android:src="@drawable/hidebl"
        android:translationZ="@android:dimen/app_icon_size"/>

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword_en"
        android:layout_above="@+id/signin_btn"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/signin_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/shadowbtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:text="@string/signin_upper_en"
        android:textColor="#9cb6c4"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:elevation="7dp"/>

</RelativeLayout>
