<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/languageButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:scaleType="centerInside"
        android:src="@drawable/english"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"/>

    <ImageView
        android:layout_width="340dp"
        android:layout_height="400dp"
        android:src="@drawable/art"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-97dp" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:src="@drawable/arrow"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/back_en"
        android:textColor="@color/white"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="75dp"
        android:text="@string/welcome_text_en"
        android:textColor="@color/white"
        android:textSize="23dp" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="105dp"
        android:text="@string/signup_text_en"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUsername"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/username_text_en"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/user"
        android:layout_above="@+id/textViewEmail"
        android:layout_marginBottom="34dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:translationZ="@android:dimen/app_icon_size" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/type_hint_en"
        android:paddingLeft="50px"
        android:textSize="15dp"
        android:inputType="text"
        android:background="@drawable/borderbtn"
        android:layout_above="@+id/textViewEmail"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email_text"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/mail"
        android:layout_above="@+id/textViewPassword"
        android:layout_marginBottom="34dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:translationZ="@android:dimen/app_icon_size" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/type_hint_en"
        android:paddingLeft="50px"
        android:textSize="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/borderbtn"
        android:layout_above="@+id/textViewPassword"/>

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="3dp"
        android:text="@string/password_text_en"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/hidebl"
        android:layout_above="@+id/textViewConfirmPassword"
        android:layout_marginBottom="34dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:translationZ="@android:dimen/app_icon_size" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/type_hint_en"
        android:paddingLeft="50px"
        android:textSize="15dp"
        android:inputType="textPassword"
        android:background="@drawable/borderbtn"
        android:layout_above="@+id/textViewConfirmPassword"/>

    <TextView
        android:id="@+id/textViewConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextConfirmPassword"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="5dp"
        android:text="@string/confirm_password_text_en"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/hidebl"
        android:layout_above="@+id/signup_btn"
        android:layout_marginBottom="64dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="55dp"
        android:translationZ="@android:dimen/app_icon_size" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:hint="@string/type_hint_en"
        android:paddingLeft="50px"
        android:textSize="15dp"
        android:inputType="textPassword"
        android:background="@drawable/borderbtn"
        android:layout_above="@+id/signup_btn"/>

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/shadowbtn_blue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:text="@string/signup_upper_en"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:elevation="7dp"/>

</RelativeLayout>
