<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_user_roles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/tool_bar_ur"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/extra_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/txt_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/user_role"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="87dp"
            android:layout_marginEnd="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_view"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="10dp"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/usroles_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="user"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usroles_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic|bold" />

            <TextView
                android:id="@+id/usroles_assigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/assigned"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic|bold" />
        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>