<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">
    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    </org.osmdroid.views.MapView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bg">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">
            <RelativeLayout
                android:id="@+id/homeNavi"
                android:layout_width="53.43dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true">
                <ImageView
                    android:id="@+id/homeIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/home"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homeNavi_en"
                    android:textSize="11sp"
                    android:layout_below="@+id/homeIcon"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/graphNavi"
                android:layout_width="53.43dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/homeNavi"
                android:layout_marginStart="30dp">
                <ImageView
                    android:id="@+id/graphIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/graph"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/graphNavi_en"
                    android:textSize="11sp"
                    android:layout_below="@+id/graphIcon"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mapNavi"
                android:layout_width="53.43dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/graphNavi"
                android:layout_marginStart="30dp">
                <ImageView
                    android:id="@+id/mapIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/location_img"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapNavi_en"
                    android:textSize="11sp"
                    android:layout_below="@+id/mapIcon"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/personalNavi"
                android:layout_width="53.43dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/mapNavi"
                android:layout_marginStart="30dp">
                <ImageView
                    android:id="@+id/personalIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/personal"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profileNavi_en"
                    android:textSize="11sp"
                    android:layout_below="@+id/personalIcon"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

        </RelativeLayout>

</RelativeLayout>
</RelativeLayout>